Fix gallery on firefox

--- a/refs/style.css
+++ b/refs/style.css
@@ -96,7 +96,7 @@ main#content {
     max-width: 100vw;
 }
 
-#gallery {
+.scroll-frame {
     overflow-y: auto;
 }
 
